# tf2x

./: CMakeLists.txt  README.md  build.sh  setup.py
src/: binding.cc
src/convert/: convert_graph.cpp  convert_graph.h  pass_manager.cpp  pass_manager.h  pybind_api.cpp  pybind_api.h
src/kernel/: example_op.cc
test/: gen_simple_pb.py  test_convert.py  test_convert_api.py  test_convert_graph_null.py  test_import.py  test_run.py  test_tf2x.py
tf2x/: __init__.py
tf2x/python/: __init__.py  tf2x_convert.py
tf2x/python/ops/: zero_out_op.py
